VAN-28125: High contrast backdrop fix

--- a/vtr-ui/src/app/material.scss
+++ b/vtr-ui/src/app/material.scss
@@ -571,6 +571,16 @@ button:focus {
 		}
 	}
 }
+
+.cdk-overlay-backdrop {
+	@media #{$white-on-black} {
+		opacity: 0.6;
+	}
+	@media #{$black-on-white} {
+		opacity: 0.6;
+	}
+}
+
 .cdk-high-contrast-active {
 	.mat-standard-chip {
 		&.vtr-material-tile {
